--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }
+
+.image,
+.card-img-top {
+    max-height: 200px;
+    width: auto;
+    height: 100%;
+    object-fit: cover;
+}
